# matrix_factorization

./: CMakeLists.txt  README.md  main.cpp
examples/data/: test_204_204  test_204_948  test_333_948  test_500_200  test_694_204
examples/joint_nmtf/: CMakeLists.txt  main.cpp
examples/mixed_nmf/: main.cpp
examples/nmf/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  losses.txt  main.cpp  test_nmf
source/: centralfactor.cpp  centralfactor.h  factor.cpp  factor.h  integration.cpp  integration.h  nmfobjective.cpp  nmfobjective.h  nmtfobjective.cpp  nmtfobjective.h  objective.cpp  objective.h  positivefactor.cpp  positivefactor.h  seminmfobjective.cpp  seminmfobjective.h  seminmtfobjective.cpp  seminmtfobjective.h  semisnmtfobjective.cpp  semisnmtfobjective.h  sidefactor.cpp  sidefactor.h  snmfobjective.cpp  snmfobjective.h  snmtfobjective.cpp  snmtfobjective.h  unconstrainedfactor.cpp  unconstrainedfactor.h
